# LIFE

./: .cproject  .gitignore  .project  CMakeLists.txt  LIFE.cpp  README.md  build.sh  run.sh
cmake/: FindPGE.cmake
